crates/hir-ty/tests/snapshots/jls_warnings__all_suppresses_every_key.snap
---
source: crates/hir-ty/tests/jls_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    @SuppressWarnings("all")
    void m(List<String> xs) {
        List raw = xs;
        List<String> unchecked = raw;
    }
}
