crates/hir-ty/tests/snapshots/jls_warnings__both_keys_suppress_both.snap
---
source: crates/hir-ty/tests/jls_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    @SuppressWarnings({"rawtypes", "unchecked"})
    void m(List<String> xs) {
        List raw = xs;
        List<String> unchecked = raw;
    }
}
