crates/hir-ty/tests/snapshots/jls_warnings__cast_to_reifiable_wildcard_is_checked.snap
---
source: crates/hir-ty/tests/jls_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    void m(Object o) {
        List<?> anys = (List<?>) o;
    }
}
