crates/hir-ty/tests/snapshots/jls_warnings__enclosing_class_scope_covers_method.snap
---
source: crates/hir-ty/tests/jls_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

@SuppressWarnings({"rawtypes", "unchecked"})
class Body {
    void m(List<String> xs) {
        List raw = xs;
        List<String> unchecked = raw;
    }
}
