crates/hir-ty/tests/snapshots/jls_warnings__raw_parameter_type.snap
---
source: crates/hir-ty/tests/jls_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    void m(List xs) {
    }
}
