crates/hir-ty/tests/snapshots/jls_warnings__raw_receiver_ground_signature_stays_checked.snap
---
source: crates/hir-ty/tests/jls_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Box<X> {
    void plain(String value) {
    }
}

class Body {
    void m(Box raw) {
        raw.plain("x");
    }
}
