crates/hir-ty/tests/snapshots/jls_warnings__sibling_scope_does_not_reach.snap
---
source: crates/hir-ty/tests/jls_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    @SuppressWarnings({"rawtypes", "unchecked"})
    void other() {
    }

    void m(List<String> xs) {
        List raw = xs;
        List<String> unchecked = raw;
    }
}

method m(java.util.List<java.lang.String>): void
  @10:13..10:21 'raw = xs': raw-type-use: Raw use of parameterized class 'List'
  @11:33..11:36 'raw': unchecked-conversion: Unchecked assignment: 'List' to 'List<String>'
