crates/hir-ty/tests/snapshots/jls_warnings__unchecked_argument_conversion.snap
---
source: crates/hir-ty/tests/jls_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Box<X> {
    X value;
}

class Body {
    static void take(Box<String> box) {
    }

    void m(Box raw) {
        take(raw);
    }
}

method m(com.example.Box): void
  @11:8..11:12 'take': unchecked-invocation: Unchecked method invocation: 'Box' to 'Box<String>'
